--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
       <dependency>
 		  <groupId>com.google.code.gson</groupId>
 		  <artifactId>gson</artifactId>
+		  <version>2.0</version>
 	</dependency>
 	
 	 <!--引入该jar包,可以使用默认的ActiveMQ-->
